@@ -1,6 +1,10 @@
 Pending changes in the mainline
 ===============================
 
+* "LastUpdate" metadata for patients, studies and series
+* Improved support of series with temporal positions
+* Fixes for Red Hat and Debian packaging
+* Fixes for boost::thread, as reported by Cyril Paulus
 
 
 Version 0.5.2 (2013/05/07)
